Table column alignments for right aligned content. Resolves #807. (#810)

--- a/spa/src/app/files/hca-content-ellipsis/hca-content-ellipsis.component.scss
+++ b/spa/src/app/files/hca-content-ellipsis/hca-content-ellipsis.component.scss
@@ -26,3 +26,8 @@
         display: block;
     }
 }
+
+/* Right align column contents */
+:host-context(.right) {
+    text-align: right;
+}
